--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,9 +3,9 @@
 # to the sample sheet and the output folder for analysis results.
 
 input_manager:
-    path: ~/SSPipe/sheet/samplesheet.tsv  # Path to the input samplesheet (CSV/TSV file)
+    path: examples/samplesheet.tsv  # Path to the input samplesheet (CSV/TSV file)
     config_species : workflow/configs_species/
-    out_folder: ~/SSPipe/Results  # Folder where the analysis results will be saved
+    out_folder: examples/Results  # Folder where the analysis results will be saved
     
 
 
@@ -16,47 +16,47 @@ input_manager:
 analysis_settings:
     
     kmeraligner:
-        yaml : /home/simonescrima/Desktop/ssi_analysis_utility/workflow/envs/kmeraligner.yaml
+        yaml : ../envs/kmeraligner.yaml
 
     resistance_gene_detection:
-        yaml : /home/simonescrima/Desktop/ssi_analysis_utility/workflow/envs/resistence_gene_detection.yaml
+        yaml : ../envs/resistence_gene_detection.yaml
 
     emm_typing:
-        yaml : /home/simonescrima/Desktop/ssi_analysis_utility/workflow/envs/emm_typing.yaml
+        yaml : ../envs/emm_typing.yaml
         
     assembly_lineage_determination:
-        yaml : /home/simonescrima/Desktop/ssi_analysis_utility/workflow/envs/assembly_lineage_determination.yaml
-        script : /home/simonescrima/Desktop/ssi_analysis_utility/workflow/scripts # Path to convert genome script directory
+        yaml : ../envs/assembly_lineage_determination.yaml
+        script : ../scripts # Path to convert genome script directory
     
     plasmidfinder:
         yaml : ../envs/plasmidfinder.yaml
         
     resfinder:
-        yaml : /home/simonescrima/Desktop/ssi_analysis_utility/workflow/envs/resfinder.yaml
+        yaml : ../envs/resfinder.yaml
 
     virulencefinder:
-        yaml : /home/simonescrima/Desktop/ssi_analysis_utility/workflow/envs/virulencefinder.yaml
+        yaml : ../envs/virulencefinder.yaml
         
     LRE-finder:
-        yaml : /home/simonescrima/Desktop/ssi_analysis_utility/workflow/envs/LREfinder.yaml
-        script: /home/simonescrima/Desktop/ssi_analysis_utility/workflow/scripts  # Path to LRE-finder script directory
+        yaml : ../envs/LREfinder.yaml
+        script: ../scripts  # Path to LRE-finder script directory
         
     serotypefinder:
-        yaml : /home/simonescrima/Desktop/ssi_analysis_utility/workflow/envs/serotypefinder.yaml
+        yaml : ../envs/serotypefinder.yaml
 
     kmerfinder:
-        yaml : /home/simonescrima/Desktop/ssi_analysis_utility/workflow/envs/kmerfinder.yaml
+        yaml : ../envs/kmerfinder.yaml
 
     cgMLSTFinder:
-        yaml : /home/simonescrima/Desktop/ssi_analysis_utility/workflow/envs/cgMLSTfinder.yaml
-        script: /home/simonescrima/Desktop/ssi_analysis_utility/workflow/scripts  # Path to cgMLSTFinder script directory
+        yaml : ../envs/cgMLSTfinder.yaml
+        script: ../scripts  # Path to cgMLSTFinder script directory
 
     kleborate:
-        yaml : /home/simonescrima/Desktop/ssi_analysis_utility/workflow/envs/kleborate.yaml
+        yaml : ../envs/kleborate.yaml
     
     CHtyper:
-        yaml : /home/simonescrima/Desktop/ssi_analysis_utility/workflow/envs/CHtyper.yaml
-        script: /home/simonescrima/Desktop/ssi_analysis_utility/workflow/scripts  # Path to CHTyper script directory
+        yaml : ../envs/CHtyper.yaml
+        script: ../scripts  # Path to CHTyper script directory
 
     
     # Illumina lineage determination (commented out for now):
