--- a/config/config.yaml
+++ b/config/config.yaml
@@ -26,7 +26,7 @@ analysis_settings:
         
     assembly_lineage_determination:
         yaml : ../envs/assembly_lineage_determination.yaml
-        script : ../scripts # Path to convert genome script directory
+        script : workflow/scripts/ # Path to convert genome script directory
     
     plasmidfinder:
         yaml : ../envs/plasmidfinder.yaml
@@ -39,24 +39,24 @@ analysis_settings:
         
     LRE-finder:
         yaml : ../envs/LREfinder.yaml
-        script: ../scripts  # Path to LRE-finder script directory
+        script: workflow/scripts/  # Path to LRE-finder script directory
         
     serotypefinder:
         yaml : ../envs/serotypefinder.yaml
 
-    kmerfinder:
-        yaml : ../envs/kmerfinder.yaml
+    # kmerfinder:
+    #     yaml : ../envs/kmerfinder.yaml
 
     cgMLSTFinder:
         yaml : ../envs/cgMLSTfinder.yaml
-        script: ../scripts  # Path to cgMLSTFinder script directory
+        script: workflow/scripts/  # Path to cgMLSTFinder script directory
 
     kleborate:
         yaml : ../envs/kleborate.yaml
     
     CHtyper:
         yaml : ../envs/CHtyper.yaml
-        script: ../scripts  # Path to CHTyper script directory
+        script: workflow/scripts/  # Path to CHTyper script directory
 
     
     # Illumina lineage determination (commented out for now):
