--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -159,6 +159,14 @@ rule all:
             ],
             out=OUT_FOLDER
         ),
+        expand(
+            "{out}/{sample}/amrfinder", 
+            sample=[
+                s for s in SAMPLES 
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["amrfinder"]["status"] is True
+            ],
+            out=OUT_FOLDER
+        ),
 
 
 
