--- a/workflow/configs_species/E.coli.yaml
+++ b/workflow/configs_species/E.coli.yaml
@@ -98,3 +98,4 @@ analyses_to_run:
         status : True
         Title : NCBI resistance gene finder
         database: resources/amrfinderplus/latest
+        organism: --organism Escherichia # Leave blank or insert --organism alongside one of the supported organisms, listed here: https://github.com/evolarjun/amr/wiki/Curated-organisms
