--- a/config/config.yaml
+++ b/config/config.yaml
@@ -73,7 +73,7 @@ analysis_settings:
         
     amrfinder:
         yaml : ../envs/amrfinder.yaml
-            
+        database: amrfinderplus/latest            
     # Illumina lineage determination (commented out for now):
     # reference_fasta_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/MGAS5005.fasta  # Fasta file for reference genome
     # lineage_variant_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/Spyogenes_LOCs.tsv  # File with lineage variants
