Added MLST By Torsten Seeman
MLST has been added and formatted to fit with the Logging conventions and Messaging convensions of #9

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -57,10 +57,12 @@ analysis_settings:
     CHtyper:
         yaml : ../envs/CHtyper.yaml
         script: workflow/scripts/  # Path to CHTyper script directory
-
         
     amrfinder:
         yaml : ../envs/amrfinder.yaml
+
+    mlst:
+        yaml : ../envs/mlst.yaml
             
     # Illumina lineage determination (commented out for now):
     # reference_fasta_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/MGAS5005.fasta  # Fasta file for reference genome
