--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -167,11 +167,20 @@ rule all:
             ],
             out=OUT_FOLDER
         ),
+        expand(
+            "{out}/{sample}/MLST", 
+            sample=[
+                s for s in SAMPLES 
+                if species_configs[sample_to_organism[s]]["analyses_to_run"]["mlst"]["status"] is True
+            ],
+            out=OUT_FOLDER
+        ),
 
 
 
 
 include : "rules/finders.smk"
+include : "rules/characterizers.smk"
 include : "rules/others.smk"
     
 
