Added temporary Automatic DB handler for Ecoli kmerAligner and polished kmeraligner rule
Current Ecoli kmeraligner database is hosted as part of a repo, to simplify, only the db file is downloaded using wget (thus wget has been added to envs/kmeraligner.yaml). The repo is prob not stable (not maintained) and thus this fix should be seen as a temporary addition to #7. To make rule comply with latest Logging and Messaging setup, the kmeraligner rule have recieved a polishing.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -18,6 +18,7 @@ analysis_settings:
 
     kmeraligner:
         yaml : ../envs/kmeraligner.yaml
+        database: kmeraligner
 
     emm_typing:
         yaml : ../envs/emm_typing.yaml
