Amend: EcoliKmerAligner set to True

--- a/workflow/configs_species/E.coli.yaml
+++ b/workflow/configs_species/E.coli.yaml
@@ -6,7 +6,7 @@
 analyses_to_run: 
 
     kmeraligner:
-        status : False
+        status : True
         Title : Kmer Aligner on two pair reads
         ID: 90
         additional_option : -matrix 
