Added SerotypeFinder database creation
SerotypeFinder database is now generated automatically (if missing). Added messaging and logging for serotypefinder rule.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -53,6 +53,7 @@ analysis_settings:
         
     serotypefinder:
         yaml : ../envs/serotypefinder.yaml
+        database: serotypefinder_db
 
     cgMLSTFinder:
         yaml : ../envs/cgMLSTfinder.yaml
