--- a/workflow/configs_species/E.coli.yaml
+++ b/workflow/configs_species/E.coli.yaml
@@ -28,9 +28,9 @@ analyses_to_run:
         reference_fasta_file: resources/lineage_determination/MGAS5005.fasta
         lineage_variant_file: resources/lineage_determination/Spyogenes_LOCs.tsv
         
-    virulence_gene_detection: 
-        status : False
-        Title: Presence of Streptococcal virulence genes from the Virulence Factor Database
+    # virulence_gene_detection: 
+    #     status : False
+    #     Title: Presence of Streptococcal virulence genes from the Virulence Factor Database
 
     plasmidfinder: 
         status : True
@@ -61,23 +61,23 @@ analyses_to_run:
         Title : Serotypefinder
         database: resources/serotypefinder_db/  # SerotypeFinder database
     
-    kleborate : 
-        status : False
-        Title : Kleborate
-        preset : kpsc
+    # kleborate : 
+    #     status : False
+    #     Title : Kleborate
+    #     preset : kpsc
 
-    CHtyper : 
-        status : False
-        Title: Chtyper
-        threshold : 0.90
-        coverage : 0.60
-        database: resources/chtyper_db/  # CHTyper database
+    # CHtyper : 
+    #     status : False
+    #     Title: Chtyper
+    #     threshold : 0.90
+    #     coverage : 0.60
+    #     database: resources/chtyper_db/  # CHTyper database
 
-    cgMLSTFinder : 
-        status : False
-        Title : cgMLST
-        scheme : ecoli # choose between  salmonella,campylobacter,yersinia,clostridium,ecoli
-        database: resources/cgmlstfinder_db/  # cgMLSTFinder database
+    # cgMLSTFinder : 
+    #     status : False
+    #     Title : cgMLST
+    #     scheme : ecoli # choose between  salmonella,campylobacter,yersinia,clostridium,ecoli
+    #     database: resources/cgmlstfinder_db/  # cgMLSTFinder database
 
     amrfinder:
         status : True
