Additional minimalism in Config and Pipe
To decrease obscurity, additional settings from the config file have been written directly into the relevant rules. This means that you can no longer point to alternative database folders names as well as different environment files for each modules, within the standard config file. This is though very unlikely to be utilized, since many tools require a very specific database structure to function, thus pointing to different folders would likely result in failure to execute.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,84 +2,6 @@
 # This section defines the input manager settings, which specify the path 
 # to the sample sheet and the output folder for analysis results.
 
-input_manager:
-    path: examples/samplesheet.tsv  # Path to the input samplesheet (CSV/TSV file)
-    database_path: resources
-    config_species : workflow/configs_species/
-    out_folder: examples/Results  # Folder where the analysis results will be saved
-    
-
-
-###################### ANALYSIS & TOOLS SETTINGS ############################
-# This section provides paths to the yaml file for the conda environemt,
-# and script required for the various analysis
-
-analysis_settings:
-
-    kmeraligner:
-        yaml : ../envs/kmeraligner.yaml
-        database: kmeraligner
-
-    emm_typing:
-        yaml : ../envs/emm_typing.yaml
-        
-    assembly_lineage_determination:
-        yaml : ../envs/assembly_lineage_determination.yaml
-        script : workflow/scripts/ # Path to convert genome script directory
-    
-    plasmidfinder:
-        yaml : ../envs/plasmidfinder.yaml
-        database: plasmidfinder_db
-        
-    resfinder:
-        yaml : ../envs/resfinder.yaml
-        database: resfinder_db
-
-    pointfinder:
-        yaml : ../envs/pointfinder.yaml
-        database: pointfinder_db
-
-    disinfinder:
-        yaml : ../envs/disinfinder.yaml
-        database: disinfinder_db
-
-    virulencefinder:
-        yaml : ../envs/virulencefinder.yaml
-        database: virulencefinder_db
-        
-    LRE-finder:
-        yaml : ../envs/LREfinder.yaml
-        script: workflow/scripts/  # Path to LRE-finder script directory
-        
-    serotypefinder:
-        yaml : ../envs/serotypefinder.yaml
-
-    cgMLSTFinder:
-        yaml : ../envs/cgMLSTfinder.yaml
-        script: workflow/scripts/  # Path to cgMLSTFinder script directory
-
-    kleborate:
-        yaml : ../envs/kleborate.yaml
-    
-    CHtyper:
-        yaml : ../envs/CHtyper.yaml
-        script: workflow/scripts/  # Path to CHTyper script directory
-        
-    amrfinder:
-        yaml : ../envs/amrfinder.yaml
-        database: amrfinderplus/latest
-
-    mlst:
-        yaml : ../envs/mlst.yaml
-            
-    # Illumina lineage determination (commented out for now):
-    # reference_fasta_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/MGAS5005.fasta  # Fasta file for reference genome
-    # lineage_variant_file: /home/simonescrima/Desktop/ssi_analysis_utility/resources/lineage_determination/Spyogenes_LOCs.tsv  # File with lineage variants
-
-
-
-         
-
-
-
-
+sheet_path: examples/samplesheet.tsv  # Path to the input samplesheet (CSV/TSV file)
+database_path: resources
+out_path: examples/Results  # Folder where the analysis results will be saved
