Added database creation file
The database creation file is now chained into the MLST run, ensuring that if the database creation file does not exist, the DB is build

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -4,6 +4,7 @@ import os
 import yaml
 from scripts import convert_external_genome
 import warnings
+import math
 
 configfile: "config/config.yaml"
 
