Modularized C.diff database creation for toxing and repeats and added sepearte snakemake rule to only test setup

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,6 +20,13 @@ analysis_settings:
         yaml : ../envs/kmeraligner.yaml
         database: kmeraligner
 
+    Clostridioides_difficile_db:
+        yaml: ../envs/DatabaseFetch.yaml
+        database: Clostridioides_difficile_db
+
+    htslib:
+        yaml : ../envs/htslib.yaml
+
     emm_typing:
         yaml : ../envs/emm_typing.yaml
         
